@@ -108,71 +108,4 @@ void Object::calculate_vector_plane() {
 }
 
 
-double Object::get_ray_lambda(Coordinate& input_plane, 
-                                    Coordinate& ray_origin,
-                                    Coordinate& view_plane) {
-    double lambda_to_return = 0.0;
-
-    // The intersection of the ray (lambda) is calculated by using the input plane's x,y,z
-    // values, the origin of the ray, and the view plane. 
-    lambda_to_return = (MatrixOperations::dot_product(input_plane,ray_origin) + input_plane.get_k())
-        / MatrixOperations::dot_product(input_plane,view_plane);
-
-    return lambda_to_return;
-}
-
-Coordinate Object::get_ray_intersection(Coordinate& input_plane,
-                                                Coordinate& ray_origin,
-                                                Coordinate& view_plane) {
-    Coordinate to_return;
-
-    // Get the value of lambda to calculate the coordinate of intersection between
-    // the ray from the view_plane to the object itself
-    double lambda = get_ray_lambda(input_plane, ray_origin, view_plane);
-
-    if(lambda < 0){
-        // IN the case that lambda is negative, it means that the intersection
-        // point is behind the camera, and thus not necessary
-        to_return = Coordinate(std::vector<double>{FLT_MIN, FLT_MIN, FLT_MIN}); 
-        to_return.set_valid(false);
-        return to_return;
-    }
-
-    to_return.set_x((lambda*view_plane.get_x()) + ray_origin.get_x());
-    to_return.set_y((lambda*view_plane.get_y()) + ray_origin.get_y());
-    to_return.set_z((lambda*view_plane.get_z()) + ray_origin.get_z());
-    to_return.set_k(0);
-
-    // Set the colour of the plane based on the point used.
-    // This can be used in the future to help with refraction and reflection,
-    // even transparent materials
-    // \todo: add in colour transparency, reflection, refraction, etc.
-    to_return.set_r(input_plane.get_r());
-    to_return.set_g(input_plane.get_g());
-    to_return.set_b(input_plane.get_b());
-    to_return.set_a(input_plane.get_a());
-
-    // Determine whether the ray is at least within the bounding box for sanity and validity
-    // PS: A quick Sanity Check
-    if (!MatrixOperations::within_bounding_box(to_return, m_list_coordinates)) {
-        to_return = Coordinate(std::vector<double>{FLT_MIN, FLT_MIN, FLT_MIN}); 
-        to_return.set_valid(false);
-        return to_return;
-    }
-
-    // Determine whether the ray actually intersects the plane
-    if (!MatrixOperations::within_plane(to_return, m_list_coordinates)){
-        to_return = Coordinate(std::vector<double>{FLT_MIN, FLT_MIN, FLT_MIN});
-        to_return.set_valid(false);
-        return to_return;
-    }
-
-    // The ray is valid in all other cases, so set it as such
-    to_return.set_valid(true);
-
-    // Do something with the actual ray and the intersection
-
-    return to_return;
-}
-
 
